fix gap in sidebar

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -196,6 +196,11 @@ li.show-more-topics {
     border-radius: 0px 0px 35px 0px;
 }
 
+.private_messages_header_container {
+    width: 100%;
+    background-color: #233264;
+}
+
 .private_messages_container {
     margin-right: 16px;
     margin-left: 6px;
@@ -204,7 +209,7 @@ li.show-more-topics {
 
     #toggle_private_messages_section_icon {
         opacity: 0.7;
-        margin-left: -15px;
+        margin-left: -7px;
         min-width: 12px;
 
         &.fa-caret-right {
